Implement slider and news blocks

--- a/web/themes/custom/rouyn_noranda/scss/typography.scss
+++ b/web/themes/custom/rouyn_noranda/scss/typography.scss
@@ -4,12 +4,20 @@
 
 //@import url("https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic,900,900italic");
 //@import url("https://fonts.googleapis.com/css?family=Raleway:400,300,500,600,700,800,900");
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
 // font families
 $font-lato: 'Lato',
 Arial,
 Verdana,
 sans-serif;
 $font-raleway: 'Raleway',
+Arial,
+Verdana,
+sans-serif;
+$font-domine: 'Domine',
+serif;
+$font-nunito: 'Nunito Sans',
 Arial,
 Verdana,
 sans-serif;
