--- a/web/themes/custom/rouyn_noranda/scss/style.scss
+++ b/web/themes/custom/rouyn_noranda/scss/style.scss
@@ -58,3 +58,162 @@ a {
 .slick>div {
     margin: 0 15px;
 }
+
+.btn {
+    border-radius: 22.5px;
+    border-width: 2px;
+
+    &.btn-outline-primary {
+        border-color: $light-blue;
+    }
+}
+
+#hero-slider {
+    width: 100%;
+}
+
+.carousel-item {
+    &, .carousel-item--container {
+        height: 932px;
+    }
+
+    .carousel-item--container {
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-color: black;
+        display: flex;
+        align-items: center;
+    }
+
+    p {
+        margin-bottom: 0;
+    }
+}
+
+.carousel-control-prev, .carousel-control-next {
+    width: 7.5%;
+}
+
+.carousel {
+    .container-fluid {
+        padding-left: 127px;
+        padding-right: 127px;
+    }
+}
+
+.slide__main-title {
+    font-family: $font-nunito;
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 5.6px;
+    line-height: 32px;
+    color: $white;
+    text-transform: uppercase;
+}
+
+.slide__subtitle {
+    font-family: $font-domine;
+    font-size: 70px;
+    font-weight: bold;
+    line-height: 80px;
+    color: $white;
+}
+
+.news {
+    height: 2439px;
+    background-image: url(../images/news_background_image.png);
+    background-repeat: no-repeat;
+    background-position: bottom left;
+    background-color: #F6F4F2;
+
+    .container-fluid {
+        padding-left: 127px;
+        padding-right: 127px;
+    }
+
+    .news__subheader {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .news__title {
+        font-family: $font-domine;
+        font-size: 56px;
+        font-weight: bold;
+        line-height: 63px;
+        color: $blue;
+        margin-bottom: 34px;
+    }
+
+    .news__categories {
+        list-style-type: none;
+        padding: 0;
+
+        li {
+            display: inline-block;
+            margin-right: 64px;
+            font-family: $font-nunito;
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 32px;
+            color: $blue;
+            
+
+            &.active {
+                font-size: 32px;
+                line-height: 43px;
+                padding-bottom: 13px;
+                border-bottom: 10px $light-blue solid;
+            }
+        }
+    }
+
+    .news__articles {
+        list-style-type: none;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 60px;
+
+        .article__image {
+            margin-bottom: 29px;
+        }
+
+        .article__topic {
+            font-family: $font-nunito;
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 19px;
+            letter-spacing: 4px;
+            color: $blue;
+            text-transform: uppercase;
+            margin-bottom: 8.5px;
+        }
+
+        .article__title {
+            font-family: $font-domine;
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 32px;
+            color: $blue;
+            margin-bottom: 10px;
+        }
+
+        .article__date {
+            font-family: $font-nunito;
+            font-size: 16px;
+            line-height: 22px;
+            color: $blue;
+            margin-bottom: 9.5px;
+        }
+
+        .article__link {
+            background: url(../images/arrow_right.svg) no-repeat;
+            display: block;
+            width: 40px;
+            height: 40px;
+        }
+    }
+}
+
