--- a/web/themes/custom/rouyn_noranda/scss/variables.scss
+++ b/web/themes/custom/rouyn_noranda/scss/variables.scss
@@ -15,7 +15,9 @@ $cyan: #17a2b8;
 $white: #fff;
 $gray-100: #f8f9fa;
 $gray-800: #343a40;
-$theme-colors: ( primary: $accent-shade, secondary: $primary-shade, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
+$blue: #2e3e53;
+$light-blue: #447eb7;
+$theme-colors: ( primary: $blue, secondary: $primary-shade, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
 $brand-primary: $accent-shade;
 //$brand-success: $green;
 //$brand-info: $teal;
